[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

#[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }

[replace]
"rust-webvr:0.6.1" = { path = "/home/mortimer/Projects/rust-webvr" }
"https://github.com/servo/webrender#0.48.0" = { path = '/home/mortimer/Projects/1ec6fb9/webrender' }
"https://github.com/servo/webrender#webrender_api:0.48.0" = { path = '/home/mortimer/Projects/1ec6fb9/webrender_api' }
"offscreen_gl_context:0.11.0" = { path = "/home/mortimer/Projects/rust-offscreen-rendering-context" }