[package]
name = "webvr"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false

[lib]
name = "webvr"
path = "lib.rs"

[features]
googlevr = ['rust-webvr/googlevr']
oculusvr = ['rust-webvr/oculusvr']
svr = ['rust-svr']

[dependencies]
canvas_traits = {path = "../canvas_traits"}
euclid = "0.15"
ipc-channel = "0.9"
log = "0.3"
msg = {path = "../msg"}
rust-webvr = {version = "0.9", features = ["openvr"]}
script_traits = {path = "../script_traits"}
servo_config = {path = "../config"}
rust-svr = { path = "/home/mortimer/Projects/rust-svr", optional = true }
webvr_traits = {path = "../webvr_traits"}
